--- a/style.css
+++ b/style.css
@@ -50,6 +50,35 @@ body{
     font-weight: 500;
 }
 
+.panel p:nth-child(2) {
+    font-size: 4rem;
+}
+
+.panel.open {
+    flex: 5;
+    font-size: 40px;
+}
+.panel > * {
+    margin: 0;
+    width: 100%;
+    transition: transform 0.5s;
+    flex: 1 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.panel > *:first-child {
+    transform: translateY(-100%);}
+.panel.open-active > *:first-child {
+    transform:translateY(0);
+}
+.panel > *:last-child {
+    transform:translateY(100%);
+}
+.panel.open-active > *:last-child {
+    transform:translateY(0);
+}
 .panel1{
 background-image: linear-gradient(rgba(0, 0, 0, 0.315),rgba(0, 0, 0, 0.253)),url(/images/panel1.jpg);
 }
@@ -68,4 +97,10 @@ background-image: linear-gradient(rgba(0, 0, 0, 0.315),rgba(0, 0, 0, 0.253)),url
 
 .panel5{
     background-image: linear-gradient(rgba(0, 0, 0, 0.424),rgba(0, 0, 0, 0.534)),url(/images/panel5.jpg);
+}
+
+@media only screen and (max-width:600px){
+    .panel p {
+        font-size: 1rem;
+    }
 }
